[gd_scene load_steps=3 format=3 uid="uid://bs8pduq2wl3vp"]

[ext_resource type="Script" path="res://2016/day7/day_7.gd" id="1_75x1h"]
[ext_resource type="PackedScene" uid="uid://boxpprwbm1mu8" path="res://input.tscn" id="2_f4mjp"]

[node name="Day7" type="CanvasLayer"]
script = ExtResource("1_75x1h")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.12549, 0, 1)

[node name="Input" parent="." instance=ExtResource("2_f4mjp")]
day = 7

[node name="DayLabel" type="Label" parent="."]
offset_left = 25.0
offset_top = 25.0
offset_right = 147.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 36
text = "Day 7"

[node name="Part1Label" type="Label" parent="."]
offset_left = 25.0
offset_top = 75.0
offset_right = 147.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 36
text = "Part 1: "

[node name="Part2Label" type="Label" parent="."]
offset_left = 25.0
offset_top = 125.0
offset_right = 147.0
offset_bottom = 175.0
theme_override_font_sizes/font_size = 36
text = "Part 2: "

[connection signal="available" from="Input" to="." method="_on_input_available"]
